# ChronoMind

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: main.py  requirements.txt
backend/base/: creation.ipynb  mcp.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
mcp_server/: main.py  requirements.txt
