[project]
name = "chronomind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "google-api-python-client==2.149.0",
    "google-auth==2.35.0",
    "google-auth-oauthlib==1.2.1",
    "httpx==0.27.2",
    "langchain-openai==0.2.9",
    "langgraph==0.2.28",
    "langgraph-checkpoint-postgres==1.0.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "tavily-python==0.5.0",
    "uvicorn[standard]==0.30.6",
]
